# WindowsLayoutManager

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.rtf  LICENSE.txt  README.md  Version.cs.in  _configure.cmd  build_release.cmd  build_release_pack.cmd  build_release_package.cmd  build_release_test.cmd
res/: TrayAppIcon.gfie
src/: CMakeLists.txt  Program.cs  TrayApp.cs  WindowsSelectionList.cs  WndManager.cs
test/: CMakeLists.txt  WndManagerTest.cs
